# Aphelion

./: .gitignore  PLUGIN_DEV.md  README.md  pyproject.toml  run.sh  swirl  test_cairo_renderer.py  test_canvas.py  test_image_processing.py  test_io.py  test_phase1.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_tools.py  verify_all.py
docs/: rendering_migration.md
plugins/: sepia.py  star_tool.py
scripts/: render_sample.py
src/: main.py
src/aphelion/: __init__.py  __main__.py  app.py
src/aphelion/core/: adjustment_layer.py  api.py  autosave.py  commands.py  document.py  effects.py  history.py  layer.py  renderer_cairo.py  session.py  settings.py
src/aphelion/effects/: artistic.py  distort.py  stylize.py
src/aphelion/tools/: clone_stamp.py  color_picker.py  eraser.py  fill.py  move.py  rectangle_select.py  selection.py  shape_tools.py  smudge.py  text.py  tool.py
src/aphelion/ui/: canvas.py  main_window.py  plugin_ui.py  ruler.py  script_console.py  startup_screen.py  theme.py  toolbar.py  worker.py
src/aphelion/ui/dialogs/: __init__.py  base.py  layer_properties.py
src/aphelion/ui/panels/: tools_dock.py
src/aphelion/utils/: image_processing.py
src/assets/styles/: paint_net.qss
src/core/: commands.py  document.py  history.py  io.py  plugins.py
src/effects/: __init__.py  adjustments.py  artistic.py  blurs.py  distort.py  photo.py  render.py  stylize.py
src/tools/: brush.py  fill.py  gradient.py  line_curve.py  pencil.py  recolor.py  shape_tools.py  shapes.py  smudge.py  text_tool.py  utility.py  zoom.py
src/ui/: canvas.py  image_strip.py  layer_panel.py  main_window.py  tool_options.py
src/ui/panels/: colors_panel.py  history_panel.py  tools_dock.py
