[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aphelion-editor"
version = "0.6.0"
description = "A professional, layer-based image editor for Linux."
readme = "README.md"
authors = [
  { name="RecursiveIntell", email="team@aphelion.org" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Graphics :: Editors :: Raster-Based",
]
dependencies = [
    "PySide6>=6.0",
    "numpy>=1.20",
    "scipy>=1.7",
    "pycairo>=1.20",
]
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/RecursiveIntell/Aphelion"
"Bug Tracker" = "https://github.com/RecursiveIntell/Aphelion/issues"

[project.scripts]
aphelion = "aphelion.app:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["aphelion*"]
